fixed menu bar overflow

--- a/src/App.css
+++ b/src/App.css
@@ -7,20 +7,16 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 #menu {
   display: flex;
   gap: 1rem;
   background: var(--whiteTr20);
   position: absolute;
   top: 0rem;
-  width: 100vw;
+  width: 100%;
   user-select: none;
+  margin: 0;
+  padding: 0;
 }
 #menu > div:hover {
   color: var(--grey1);
