--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,10 @@
   --grey0: rgb(139, 139, 139);
   --grey1: rgb(180, 180, 180);
 }
-
+html {
+  margin: 0;
+  padding: 0;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -14,8 +17,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: var(--backgroundblack);
-  margin: 0;
-  padding: 0;
 }
 
 code {
